<resources>
    <!-- Strings related to login -->
    <string name="app_name">Cheaper</string>
    <string name="Or">أو</string>
    <string name="ContinueWithFacebook">متابعة بحساب فيسبوك</string>
    <string name="Name">الاسم</string>
    <string name="Password">كلمة المرور</string>
    <string name="DidYouForgetYourPassword">هل نسيت كلمة السر ؟</string>
    <string name="Enter">دخول</string>
    <string name="newuser">تسجيل بواسطة</string>

    <string name="AreYouNewUser">هل أنت جديد على أرخصلى ؟</string>
    <string name="CreateNewAccount">إنشاء حساب</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="Email">البريد الإلكترونى</string>
    <string name="PhoneNumber">رقم الجوال</string>
    <string name="ConfirmPassword">تأكيد كلمة المرور</string>
    <string name="Signup">تسجيل</string>
    <string name="ImageSuccessfullyChoosed">تم اختيار الصورة بنجاح</string>
    <string name="ImageFailedChoosed">لم يتم اختيار الصورة بنجاح!!</string>
    <string name="ChooseImage">اختيار الصورة</string>
    <string name="ImageChooseOptions">هل تريد التقاط صورة لك ام اختيار صورة من الاستوديو ؟</string>
    <string name="TakePhoto">التقاط صورة</string>
    <string name="Cancel">إلغاء</string>
    <string name="SendPasswordEmail">يرجى كتابة البريد الإلكترونى الخاص بك المرتبط بأرخصلى وسيتم إرسال رابط إليك لتعديل كلمة المرور</string>
    <string name="Send">إرسال</string>
    <string name="PasswordSentSuccess">لقد تم إرسال كلمة السر لك بنجاح</string>
    <string name="title_activity_home_fragment">HomeFragmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="AllAds">كل الإعلانات</string>
    <string name="TodayAds">إعلانات اليوم</string>
    <string name="product_name">اسم المنتج</string>
    <string name="store_name">اسم المتجر</string>

    <string name="title_activity_navigation">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--   navigation drawer list-->
    <string name="HOME_PAGE">الصفحه الرئيسيه</string>
    <string name="SIGN_IN">تسجيل الدخول</string>
    <string name="SIGN_OUT">تسجيل الخروج</string>
    <string name="Notification"> الاشعارات</string>
    <string name="Stores">المتاجر</string>
    <string name="Departments">اقسام المنتجات</string>
    <string name="Search">البحث </string>
    <string name="Contact_us">تواصل معنا </string>

    <!--   Departments Types list-->
    <string name="MobilesAndAcsseories">الموبايلات والاكسسوارات</string>
    <string name="watches">الساعات والاكسسوارات</string>
    <string name="JewelleryAndAccessories">المجوهرات والاكسسوارات</string>
    <string name="ShoesAndBags"> الشنط والاحذيه</string>

    <!-- product details-->
    <string name="Product">المنتج</string>
    <string name="store">المتجر</string>
    <string name="product_descriptions">المواصفات</string>
    <string name="Price_Bfore">السعر قبل العرض</string>
    <string name="Price_Aftter">السعر بعد العرض</string>
    <string name="SorrySigninFirstToCall">عفوا قم بتسجيل الدخول حتى يمكنك الاتصال</string>
    <string name="NewAccount">حساب جديد</string>
    <!-- Advertiser data ENTRY-->
    <string name="storename">اسم المتجر</string>
    <string name="storeimg">واجهة المتجر</string>
    <string name="storeaddres">عنوان المتجر</string>
    <string name="addres">العنوان وفقا ل Gps</string>


    <string-array name="Country">
        <item>المدينه</item>
        <item>القاهره</item>
        <item>الاسكندريه</item>
        <item>المنصوره</item>
        <item>الجيزه</item>
        <item>دمياط</item>
        <item>المحله</item>
        <item>شرم الشيخ</item>
    </string-array>
    <string name="agreeonconditions">اوافق على الشروط والاحكام</string>
    <string name="SIGN">تسجيل</string>
    <string name="SuccessRequest">لقد تم تسجيل طلبك بنجاح</string>
    <string name="GoTo">ذهاب الى</string>
    <string name="AddAds">إضافة إعلان</string>
    <string name="MainPage">الرئيسية</string>
    <string name="NewAccountasadviser"> التسجيل كتاجر </string>

</resources>
