<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/GoTo"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/mainPage_btn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/MainPage"
                android:layout_marginRight="30dp"
                android:background="@drawable/buttonwithcorners"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/White"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/addAds_btn"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/AddAds"
                android:background="@drawable/buttonwithcorners"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/White"
                android:textSize="20dp"
                android:textStyle="bold"/>



        </LinearLayout>

    </LinearLayout>



</LinearLayout>
