<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <ImageView
            android:id="@+id/logo_imageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:src="@drawable/hot_deal"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="30dp"
            android:foreground="?android:attr/selectableItemBackground"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_Edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_border"
                android:paddingRight="10dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password_Edittext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/Password"
                android:imeActionId="6"
                android:imeActionLabel="@string/Password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/edittext_border"
                android:paddingRight="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:id="@+id/forgetPassword_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DidYouForgetYourPassword"
            android:layout_marginTop="10dp"
            android:textColor="@color/Blue"
            android:textDirection="ltr"
            android:foreground="?android:attr/selectableItemBackground"/>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonwithcorners"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Enter"
            android:textColor="@color/White"
            android:textSize="20dp"
            android:textStyle="italic|normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AreYouNewUser"
                android:textColor="@color/Gray"/>

            <TextView
                android:id="@+id/createNewAccount_Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CreateNewAccount"
                android:textColor="@color/Blue"
                android:textSize="14dp"
                android:layout_marginRight="20dp"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#000" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/Or" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="#000" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/signinWithFacebook_Textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ContinueWithFacebook"
                android:textColor="@color/Blue"
                android:textSize="14dp"
                android:layout_marginRight="10dp"
                android:foreground="?android:attr/selectableItemBackground"/>


            <ImageView
                android:id="@+id/signinWithFacebook_Imageview"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/facebook_icon"
                android:foreground="?android:attr/selectableItemBackground"/>




        </LinearLayout>



    </LinearLayout>

</ScrollView>