<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.unknown.cheaper.AdvertiserDataEntery_Activity">

    <include layout="@layout/actionbar"
        android:id="@+id/include" />

    <EditText
        android:id="@+id/storename_Edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/storeimg_Edittext"
        android:layout_alignStart="@+id/storeimg_Edittext"
        android:layout_below="@+id/include"
        android:layout_marginTop="31dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/reqired"
        android:drawablePadding="5dp"
        android:hint="@string/storename"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:maxLines="1"

        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/storeimg_Edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignEnd="@+id/storephone_Edittext"

        android:layout_alignStart="@+id/storephone_Edittext"
        android:layout_below="@+id/storename_Edittext"
        android:layout_marginTop="17dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/reqired"

        android:drawablePadding="5dp"
        android:hint="واجهة المتجر"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/addimg"
        android:layout_width="30dp"

        android:layout_height="30dp"

        android:layout_alignBottom="@+id/storeimg_Edittext"
        android:layout_alignStart="@+id/storeimg_Edittext"
        android:layout_marginStart="31dp"
        android:background="@drawable/ic_attach_file_black_24dp"
        android:rotation="-40"
        android:text="" />

    <Button
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="#938f8f"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/storeimg_Edittext"
        android:layout_marginTop="36dp"
         />




    <EditText
        android:id="@+id/storephone_Edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/reqired"
        android:drawablePadding="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        android:hint="@string/PhoneNumber"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:maxLines="1"
        android:paddingLeft="5dp"

        android:paddingRight="5dp"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/storephone_Edittext"
        android:dropDownVerticalOffset="-53dp"
        android:spinnerMode="dropdown"
android:background="@drawable/edittext_border"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawSelectorOnTop="true"
        android:layout_marginTop="17dp" />

    <EditText
        android:id="@+id/storeaddress_Edittext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/spinner2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/edittext_border"
        android:drawableLeft="@drawable/reqired"
        android:drawablePadding="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        android:hint="@string/storeaddres"
        android:inputType="text"
        android:layoutDirection="rtl"
        android:maxLines="1"
        android:paddingLeft="5dp"

        android:paddingRight="5dp"
        android:singleLine="true" />

    <Button
        android:id="@+id/button4"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_above="@+id/storeaddress_Edittext"
        android:layout_alignStart="@+id/spinner2"
        android:background="#00ffffff"
        android:rotation="180"
        android:textColor="#7c7a7a"
        android:text="^"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/storeaddress_Edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/addres" />

    <ImageView
        android:id="@+id/currentlocationimg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/currentlocation" />


    <Button
        android:id="@+id/createNewAccount_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/darkerbuttonwithcorners"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="الشروط والاحكام"
        android:textColor="@color/White"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>
